# CppNoddy

./: .atom-build.yml  .clang_complete  CHANGELOG  Doxyfile  LICENSE.md  README  README.org  SConstruct  astylerc  build.sh  build_complex.sh  build_double.sh  build_real.sh  dox_footer.html  dox_header.html  flake.nix  makefile  meson.build  meson_options.txt  shell.nix  shell_complex.nix  shell_real.nix
Examples/: ExamplesOverview.h  SConscript
Examples/Arclength/: Arc_Shoot_FalknerSkan.cpp  Arc_Trans_Fold.cpp  Arc_circle.cpp  Arc_circle_vector.cpp
Examples/BVP/: BVP_Berman.cpp  BVP_Blasius.cpp  BVP_Harmonic.cpp  BVP_JH_arc_NV.cpp  BVP_Karman.cpp  BVP_Karman_Jacobian.cpp  BVP_Karman_adapt.cpp  BVP_Karman_arc.cpp  BVP_Troesch.cpp  BVP_nonIdentity.cpp  BVP_quarterlayer_NV.cpp  Shoot_Berman.cpp  Shoot_Blasius.cpp
Examples/Containers/: MPI_MUMPS.cpp  MatrixMult.cpp  MatrixSolves.cpp  MatrixSparseSolves.cpp  Matrix_CompareNative.cpp  NMatrix1.cpp  NMatrix2.cpp  Vec_DenseVector.cpp  Vec_Overloading.cpp  Vec_SparseVector.cpp
Examples/EVP/: EVP_Berman_linearised.cpp  EVP_Harmonic.cpp  EVP_Harmonic_easy.cpp  EVP_Harmonic_sparse.cpp  EVP_OrrSommerfeld.cpp  EVP_OrrSommerfeld_easy.cpp  EVP_OrrSommerfeld_neutralcurve.cpp  EVP_OrrSommerfeld_sparse.cpp  EVP_Rayleigh.cpp  EVP_Rayliegh.cpp  EVP_Shoot_Biharmonic.cpp  EVP_Test.cpp  EVP_complex.cpp  EVP_complex_sparse.cpp  EVP_local_Harmonic.cpp  EVP_real_sparse.cpp  EVP_trivially_linearised.cpp
Examples/Generic/: ExceptionChecks.cpp  NewtonIter.cpp  Quad.cpp  TrivialComplex.cpp
Examples/HYP_1D/: HYP_acoustic_impedance.cpp  HYP_acoustic_reflection.cpp  HYP_nonlinear_advection.cpp  HYP_radial_dam_break.cpp  HYP_shallow_source_NV.cpp  HYP_shallow_water_NV.cpp  HYP_shocktube_Lax_NV.cpp  HYP_shocktube_Sod.cpp
Examples/HYP_2D/: HYP_2D_Euler_NV.cpp  HYP_2D_RayTay_NV.cpp  HYP_2D_acoustic_NV.cpp  HYP_2D_linear_advection_xy.cpp  HYP_2D_nonlinear_advection_x.cpp  HYP_2D_nonlinear_advection_xy.cpp  HYP_2D_nonlinear_advection_y.cpp  HYP_2D_radial_dam_break.cpp  HYP_2D_shallow_source.cpp
Examples/IBVP/: IBVP_Karman.cpp  IBVP_diffusion.cpp  IBVP_diffusion_nonlinear.cpp  IBVP_nonlinear_advdiff.cpp
Examples/IVP/: IVP_Harmonic.cpp  IVP_Lorenz.cpp
Examples/Meshes/: 1DNodeMesh.cpp  1DNodeMesh_Airy.cpp  2DNodeMesh.cpp
Examples/Poisson/: Poisson_C.cpp  Poisson_Stokes.cpp  Poisson_m.cpp
Examples/Validation/: validate.sh
Examples/double_IBVP/: IBVP_linear.cpp  IBVP_nonlinear_fast.cpp  IBVP_nonlinear_slow.cpp
Tests/: TestsOverview.h  Utils_Fill.h  buildscript  meson.build
Tests/Arclength/: ArcCircle.cpp  ArcCircleVector.cpp  ArcShootFalknerSkan.cpp  ArcTranscritFold.cpp  byhand.meson.build
Tests/BVP/: BVPBerman.cpp  BVPBlasius.cpp  BVPHarmonic.cpp  BVPKarman.cpp  BVPKarmanAdaptive.cpp  BVPKarmanArclength.cpp  BVPKarmanJacobian.cpp  BVPNonIdentityMatrix0.cpp  BVPTroesch.cpp  BermanShooting.cpp  BlasiusShooting.cpp  meson.build
Tests/EVP/: EVP2DOrrSommerfeld_slepcz.cpp  EVP2DOrrSommerfeld_slepcz_mklpardiso.cpp  EVP2DOrrSommerfeld_slepcz_mumps.cpp  EVPComplex_lapack.cpp  EVPHarmonicComplexSparse_slepcz.cpp  EVPHarmonicComplex_lapack.cpp  EVPHarmonicEasy_lapack.cpp  EVPHarmonicLocal.cpp  (+12 more)
build_docker/: complex  real
docker/: Dockerfile_ComplexPetscSlepc  Dockerfile_ComplexPetscSlepcMKL  Dockerfile_Lapack  Dockerfile_RealPetscSlepc  Dockerfile_RealPetscSlepcMKL
docs/: 1DNodeMeshAiry__lapack_8cpp.html  1DNodeMeshAiry__lapack_8cpp_source.html  1DNodeMeshComplex_8cpp.html  1DNodeMeshComplex_8cpp_source.html  1DNodeMesh_8cpp.html  1DNodeMesh_8cpp_source.html  2DNodeMesh_8cpp.html  2DNodeMesh_8cpp_source.html  ArcCircleVector_8cpp.html  ArcCircleVector_8cpp_source.html  ArcCircle_8cpp.html  ArcCircle_8cpp_source.html  ArcLength__base_8cpp.html  ArcLength__base_8cpp_source.html  ArcLength__base_8h.html  ArcLength__base_8h_source.html  ArcShootFalknerSkan_8cpp.html  ArcShootFalknerSkan_8cpp_source.html  ArcTranscritFold_8cpp.html  ArcTranscritFold_8cpp_source.html  BVPBerman_8cpp.html  BVPBerman_8cpp_source.html  BVPBlasius_8cpp.html  BVPBlasius_8cpp_source.html  BVPHarmonic_8cpp.html  BVPHarmonic_8cpp_source.html  BVPKarmanAdaptive_8cpp.html  BVPKarmanAdaptive_8cpp_source.html  BVPKarmanArclength_8cpp.html  BVPKarmanArclength_8cpp_source.html  BVPKarmanJacobian_8cpp.html  BVPKarmanJacobian_8cpp_source.html  BVPKarman_8cpp.html  BVPKarman_8cpp_source.html  BVPNonIdentityMatrix0_8cpp.html  BVPNonIdentityMatrix0_8cpp_source.html  BVPTroesch_8cpp.html  BVPTroesch_8cpp_source.html  BVP__bundle_8h.html  BVP__bundle_8h_source.html  (+703 more)
include/: #meson.build#  ArcLength_base.h  BVP_bundle.h  BandedLinearEigenSystem.h  BandedLinearSystem.h  BandedMatrix.h  CppNoddy.h  DenseLinearEigenSystem.h  DenseLinearSystem.h  DenseMatrix.h  DenseVector.h  DistributedLinearSystem.h  DistributedMatrix.h  DistributedVector.h  EVP_bundle.h  Equation.h  Equation_1matrix.h  Equation_2matrix.h  Equation_3matrix.h  Equation_with_double_mass.h  Equation_with_mass.h  Exceptions.h  FT.h  FnQuadrature.h  FortranARPACK.h  FortranBLAS.h  FortranData.h  FortranLAPACK.h  Functors.h  Generic_bundle.h  HST.h  IBVP_bundle.h  IBVP_double_bundle.h  IVP_bundle.h  LinearEigenSystem_base.h  LinearSystem_base.h  MPIinit.h  Matrix_base.h  Newton.h  Newton_bundle.h  (+40 more)
nix/: overlay.nix
src/: ArcLength_base.cpp  BandedLinearEigenSystem.cpp  BandedLinearSystem.cpp  BandedMatrix.cpp  DenseLinearEigenSystem.cpp  DenseLinearSystem.cpp  DenseMatrix.cpp  DenseVector.cpp  Equation.cpp  Equation_1matrix.cpp  Equation_2matrix.cpp  Equation_3matrix.cpp  Equation_with_double_mass.cpp  Equation_with_mass.cpp  FT.cpp  FnQuadrature.cpp  LinearEigenSystem_base.cpp  LinearSystem_base.cpp  Newton.cpp  ODE_BVP.cpp  ODE_EVP.cpp  ODE_IVP.cpp  OneD_Node_Mesh.cpp  OneD_TVDLF_Elt.cpp  OneD_TVDLF_Mesh.cpp  PDE_IBVP.cpp  PDE_double_IBVP.cpp  Poisson_Cartesian.cpp  Poisson_meridional.cpp  Residual.cpp  Residual_with_coords.cpp  SparseLinearEigenSystem.cpp  SparseLinearSystem.cpp  SparseMatrix.cpp  SparseVector.cpp  Timer.cpp  TrackerFile.cpp  TwoD_Mapped_Node_Mesh.cpp  TwoD_Node_Mesh.cpp  TwoD_TVDLF_Elt.cpp  (+6 more)
(+1451 files in other folders)
